User register and authenticate fully implemented

--- a/clp-backend/src/main/resources/application.properties
+++ b/clp-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+management.endpoint.beans.enabled=true
+management.endpoint.shutdown.enabled=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
